# cvblobslib

./: CMakeLists.txt  README
examples/: blobTest.cpp
src/: Blob.cpp  BlobContour.cpp
